--- a/P8105_hw1_hc3212.md
+++ b/P8105_hw1_hc3212.md
@@ -35,9 +35,46 @@ Create a data frame comprised of:
 ``` r
 prob1_df =
   tibble(
-    sample = rnorm(10),
-    samp_vec_0 = sample > 0,
+    sample_1 = rnorm(10),
+    samp_vec_0 = sample_1 > 0,
     char_vec = c("a", "b", "c", "d", "e", "f", "g","h", "i", "j"),
     fact_vec = factor(c("low", "high", "low", "high", "low", "high", "low", "mid", "mid", "low"))
   )
+prob1_df
 ```
+
+    ## # A tibble: 10 × 4
+    ##    sample_1 samp_vec_0 char_vec fact_vec
+    ##       <dbl> <lgl>      <chr>    <fct>   
+    ##  1    2.12  TRUE       a        low     
+    ##  2   -0.251 FALSE      b        high    
+    ##  3    0.183 TRUE       c        low     
+    ##  4   -2.11  FALSE      d        high    
+    ##  5    0.950 TRUE       e        low     
+    ##  6    1.50  TRUE       f        high    
+    ##  7    0.394 TRUE       g        low     
+    ##  8    0.326 TRUE       h        mid     
+    ##  9   -0.198 FALSE      i        mid     
+    ## 10   -0.393 FALSE      j        low
+
+Taking the mean of each variable.
+
+``` r
+mean(pull(prob1_df, sample_1))
+```
+
+    ## [1] 0.2522918
+
+``` r
+mean(pull(prob1_df, samp_vec_0))
+```
+
+    ## [1] 0.6
+
+``` r
+#mean(pull(prob1_df, char_vec))
+#mean(pull(prob1_df, fact_vec))
+```
+
+The number and logical vector could take mean while the character and
+factor vector could not.
