--- a/P8105_hw1_hc3212.md
+++ b/P8105_hw1_hc3212.md
@@ -32,49 +32,66 @@ Create a data frame comprised of:
 
 <!-- end list -->
 
+    ## # A tibble: 10 × 4
+    ##    sample_1 samp_vec_0 char_vec fact_vec
+    ##       <dbl> <lgl>      <chr>    <fct>   
+    ##  1   0.144  TRUE       a        low     
+    ##  2  -0.952  FALSE      b        high    
+    ##  3  -0.260  FALSE      c        low     
+    ##  4  -0.166  FALSE      d        high    
+    ##  5   0.481  TRUE       e        low     
+    ##  6  -0.936  FALSE      f        high    
+    ##  7   0.0493 TRUE       g        low     
+    ##  8  -0.253  FALSE      h        mid     
+    ##  9   1.37   TRUE       i        mid     
+    ## 10   1.21   TRUE       j        low
+
+Taking the mean of each variable.
+
+    ## [1] 0.06838262
+
+    ## [1] 0.5
+
+    ## Warning in mean.default(pull(prob1_df, char_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+    ## Warning in mean.default(pull(prob1_df, fact_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+The number and logical vector could take mean while the character and
+factor vector could not.
+
+Convert the logical, character, and factor variable into numeric.
+
 ``` r
-prob1_df =
-  tibble(
-    sample_1 = rnorm(10),
-    samp_vec_0 = sample_1 > 0,
-    char_vec = c("a", "b", "c", "d", "e", "f", "g","h", "i", "j"),
-    fact_vec = factor(c("low", "high", "low", "high", "low", "high", "low", "mid", "mid", "low"))
-  )
+as.numeric(pull(prob1_df, samp_vec_0))
+as.numeric(pull(prob1_df, char_vec))
+```
+
+    ## Warning: NAs introduced by coercion
+
+``` r
+as.numeric(pull(prob1_df, fact_vec))
+```
+
+``` r
 prob1_df
 ```
 
     ## # A tibble: 10 × 4
     ##    sample_1 samp_vec_0 char_vec fact_vec
     ##       <dbl> <lgl>      <chr>    <fct>   
-    ##  1    2.12  TRUE       a        low     
-    ##  2   -0.251 FALSE      b        high    
-    ##  3    0.183 TRUE       c        low     
-    ##  4   -2.11  FALSE      d        high    
-    ##  5    0.950 TRUE       e        low     
-    ##  6    1.50  TRUE       f        high    
-    ##  7    0.394 TRUE       g        low     
-    ##  8    0.326 TRUE       h        mid     
-    ##  9   -0.198 FALSE      i        mid     
-    ## 10   -0.393 FALSE      j        low
-
-Taking the mean of each variable.
-
-``` r
-mean(pull(prob1_df, sample_1))
-```
-
-    ## [1] 0.2522918
-
-``` r
-mean(pull(prob1_df, samp_vec_0))
-```
-
-    ## [1] 0.6
-
-``` r
-#mean(pull(prob1_df, char_vec))
-#mean(pull(prob1_df, fact_vec))
-```
-
-The number and logical vector could take mean while the character and
-factor vector could not.
+    ##  1   0.144  TRUE       a        low     
+    ##  2  -0.952  FALSE      b        high    
+    ##  3  -0.260  FALSE      c        low     
+    ##  4  -0.166  FALSE      d        high    
+    ##  5   0.481  TRUE       e        low     
+    ##  6  -0.936  FALSE      f        high    
+    ##  7   0.0493 TRUE       g        low     
+    ##  8  -0.253  FALSE      h        mid     
+    ##  9   1.37   TRUE       i        mid     
+    ## 10   1.21   TRUE       j        low
