--- a/P8105_hw1_hc3212.md
+++ b/P8105_hw1_hc3212.md
@@ -35,22 +35,22 @@ Create a data frame comprised of:
     ## # A tibble: 10 × 4
     ##    sample_1 samp_vec_0 char_vec fact_vec
     ##       <dbl> <lgl>      <chr>    <fct>   
-    ##  1   0.144  TRUE       a        low     
-    ##  2  -0.952  FALSE      b        high    
-    ##  3  -0.260  FALSE      c        low     
-    ##  4  -0.166  FALSE      d        high    
-    ##  5   0.481  TRUE       e        low     
-    ##  6  -0.936  FALSE      f        high    
-    ##  7   0.0493 TRUE       g        low     
-    ##  8  -0.253  FALSE      h        mid     
-    ##  9   1.37   TRUE       i        mid     
-    ## 10   1.21   TRUE       j        low
+    ##  1   0.358  TRUE       a        low     
+    ##  2  -0.815  FALSE      b        high    
+    ##  3  -2.27   FALSE      c        low     
+    ##  4   1.29   TRUE       d        high    
+    ##  5   0.588  TRUE       e        low     
+    ##  6   1.20   TRUE       f        high    
+    ##  7   0.0825 TRUE       g        low     
+    ##  8   0.110  TRUE       h        mid     
+    ##  9   1.20   TRUE       i        mid     
+    ## 10  -1.23   FALSE      j        low
 
 Taking the mean of each variable.
 
-    ## [1] 0.06838262
+    ## [1] 0.04956227
 
-    ## [1] 0.5
+    ## [1] 0.7
 
     ## Warning in mean.default(pull(prob1_df, char_vec)): argument is not numeric or
     ## logical: returning NA
@@ -78,20 +78,28 @@ as.numeric(pull(prob1_df, char_vec))
 as.numeric(pull(prob1_df, fact_vec))
 ```
 
+The Count the mean agian after convert.
+
+    ## [1] 0.7
+
+    ## Warning in mean(as.numeric(pull(prob1_df, char_vec))): NAs introduced by
+    ## coercion
+
+    ## [1] NA
+
+    ## [1] 1.9
+
+## Problem 2
+
+The trunk below is to download the a package containing the penguins
+dataset:
+
 ``` r
-prob1_df
+data("penguins", package = "palmerpenguins")
 ```
 
-    ## # A tibble: 10 × 4
-    ##    sample_1 samp_vec_0 char_vec fact_vec
-    ##       <dbl> <lgl>      <chr>    <fct>   
-    ##  1   0.144  TRUE       a        low     
-    ##  2  -0.952  FALSE      b        high    
-    ##  3  -0.260  FALSE      c        low     
-    ##  4  -0.166  FALSE      d        high    
-    ##  5   0.481  TRUE       e        low     
-    ##  6  -0.936  FALSE      f        high    
-    ##  7   0.0493 TRUE       g        low     
-    ##  8  -0.253  FALSE      h        mid     
-    ##  9   1.37   TRUE       i        mid     
-    ## 10   1.21   TRUE       j        low
+The **Penguins** dataset contains the following variables:
+bill\_depth\_mm, bill\_length\_mm, body\_mass\_g, flipper\_length\_mm,
+island, sex, species, year.
+
+    Bill Depth (mm) is a numeric variable. The mean bill depth (mm) is 17.1511696. Values for bill depth range from 13.1, 21.5 (min, max).
