--- a/P8105_hw1_hc3212.md
+++ b/P8105_hw1_hc3212.md
@@ -30,27 +30,27 @@ Create a data frame comprised of:
   - a character vector of length 10
   - a factor vector of length 10, with 3 different factor “levels”
 
-<!-- end list -->
+Solution: Create the sample:
 
     ## # A tibble: 10 × 4
     ##    sample_1 samp_vec_0 char_vec fact_vec
     ##       <dbl> <lgl>      <chr>    <fct>   
-    ##  1   0.358  TRUE       a        low     
-    ##  2  -0.815  FALSE      b        high    
-    ##  3  -2.27   FALSE      c        low     
-    ##  4   1.29   TRUE       d        high    
-    ##  5   0.588  TRUE       e        low     
-    ##  6   1.20   TRUE       f        high    
-    ##  7   0.0825 TRUE       g        low     
-    ##  8   0.110  TRUE       h        mid     
-    ##  9   1.20   TRUE       i        mid     
-    ## 10  -1.23   FALSE      j        low
+    ##  1    0.815 TRUE       a        low     
+    ##  2    0.585 TRUE       b        high    
+    ##  3    1.86  TRUE       c        low     
+    ##  4   -0.514 FALSE      d        high    
+    ##  5   -0.779 FALSE      e        low     
+    ##  6   -0.319 FALSE      f        high    
+    ##  7   -1.68  FALSE      g        low     
+    ##  8   -1.19  FALSE      h        mid     
+    ##  9    0.888 TRUE       i        mid     
+    ## 10    0.965 TRUE       j        low
 
 Taking the mean of each variable.
 
-    ## [1] 0.04956227
+    ## [1] 0.06275767
 
-    ## [1] 0.7
+    ## [1] 0.5
 
     ## Warning in mean.default(pull(prob1_df, char_vec)): argument is not numeric or
     ## logical: returning NA
@@ -78,9 +78,9 @@ as.numeric(pull(prob1_df, char_vec))
 as.numeric(pull(prob1_df, fact_vec))
 ```
 
-The Count the mean agian after convert.
+Calculate the mean again after convert.
 
-    ## [1] 0.7
+    ## [1] 0.5
 
     ## Warning in mean(as.numeric(pull(prob1_df, char_vec))): NAs introduced by
     ## coercion
@@ -88,6 +88,13 @@ The Count the mean agian after convert.
     ## [1] NA
 
     ## [1] 1.9
+
+After covert, the factor and logical variable could turn into numeric
+while the character variable could not. The logical variable with “TRUE”
+and “FALSE” result could turn into “1” and “0”, then the mean could be
+calculated. the facter variable could turn into “1”, “2”, “3”, and
+calculated mean. Character variable will all equal to NA, the mean will
+return as NA.
 
 ## Problem 2
 
@@ -102,4 +109,9 @@ The **Penguins** dataset contains the following variables:
 bill\_depth\_mm, bill\_length\_mm, body\_mass\_g, flipper\_length\_mm,
 island, sex, species, year.
 
-    Bill Depth (mm) is a numeric variable. The mean bill depth (mm) is 17.1511696. Values for bill depth range from 13.1, 21.5 (min, max).
+    Bill Depth (mm) is a numeric variable. The mean bill depth (mm) is 17.1511696. Values for bill depth range from 13.1, 21.5 (min, max). ```{r descriptdata}
+
+char\_class = ls(penguins) while (char\_class \!= null){ char\_a =
+char\_class\[1\], if
+
+print }
