--- a/P8105_hw1_hc3212.md
+++ b/P8105_hw1_hc3212.md
@@ -30,27 +30,15 @@ Create a data frame comprised of:
   - a character vector of length 10
   - a factor vector of length 10, with 3 different factor “levels”
 
-Solution: Create the sample:
+Solution:
 
-    ## # A tibble: 10 × 4
-    ##    sample_1 samp_vec_0 char_vec fact_vec
-    ##       <dbl> <lgl>      <chr>    <fct>   
-    ##  1    0.815 TRUE       a        low     
-    ##  2    0.585 TRUE       b        high    
-    ##  3    1.86  TRUE       c        low     
-    ##  4   -0.514 FALSE      d        high    
-    ##  5   -0.779 FALSE      e        low     
-    ##  6   -0.319 FALSE      f        high    
-    ##  7   -1.68  FALSE      g        low     
-    ##  8   -1.19  FALSE      h        mid     
-    ##  9    0.888 TRUE       i        mid     
-    ## 10    0.965 TRUE       j        low
+Create the sample:
 
 Taking the mean of each variable.
 
-    ## [1] 0.06275767
+    ## [1] 0.1322028
 
-    ## [1] 0.5
+    ## [1] 0.6
 
     ## Warning in mean.default(pull(prob1_df, char_vec)): argument is not numeric or
     ## logical: returning NA
@@ -80,7 +68,7 @@ as.numeric(pull(prob1_df, fact_vec))
 
 Calculate the mean again after convert.
 
-    ## [1] 0.5
+    ## [1] 0.6
 
     ## Warning in mean(as.numeric(pull(prob1_df, char_vec))): NAs introduced by
     ## coercion
@@ -109,9 +97,50 @@ The **Penguins** dataset contains the following variables:
 bill\_depth\_mm, bill\_length\_mm, body\_mass\_g, flipper\_length\_mm,
 island, sex, species, year.
 
-    Bill Depth (mm) is a numeric variable. The mean bill depth (mm) is 17.1511696. Values for bill depth range from 13.1, 21.5 (min, max). ```{r descriptdata}
+Bill depth (mm) is a numeric variable. The mean of bill depth (mm) is
+17.1511696. Values for bill depth range from 13.1, 21.5 (min, max).
 
-char\_class = ls(penguins) while (char\_class \!= null){ char\_a =
-char\_class\[1\], if
+Bill length (mm) is a numeric variable. The mean of bill length (mm) is
+43.9219298. Values for bill length range from 32.1, 59.6 (min, max).
 
-print }
+Body mass (g) is a integer variable. The mean of Body mass (g) is
+4201.754386. Values for bill depth range from 2700, 6300 (min, max).
+
+Flipper length (mm) is a integer variable. The mean of flipper length
+(mm) is 200.9152047. Values for flipper length range from 172, 231 (min,
+max).
+
+Island is a factor variable, which has Biscoe, Dream, Torgersen islands.
+
+Sex is a factor variable, which has female, male categories.
+
+Species is a factor variable, which has species Adelie, Chinstrap,
+Gentoo.
+
+Year is a integer variable. The range for the years variable is from
+2007, 2009.
+
+The number of rows (observations) in the Penguin dataset is 344.
+
+The number of columns (variables) in the Penguin dataset is 8.
+
+This code chunk below is to generate a scatter plot for bill length and
+flipper length, each color represents a different species.
+
+``` r
+library(ggplot2)
+set.seed(1)
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point() + ggtitle("Flipper Length vs. Bill Length for Penguins by Species") + theme(plot.title = element_text(hjust = 0.6))
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](P8105_hw1_hc3212_files/figure-gfm/scatterplot_penguin-1.png)<!-- -->
+
+``` r
+ggsave("scatterplot_penguin.pdf")
+```
+
+    ## Saving 7 x 5 in image
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
