--- a/P8105_hw1_hc3212.md
+++ b/P8105_hw1_hc3212.md
@@ -5,21 +5,6 @@ HeningCui
 
 This is the solution for Homework 1.
 
-``` r
-library(tidyverse)
-```
-
-    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.1 ──
-
-    ## ✓ ggplot2 3.3.5     ✓ purrr   0.3.4
-    ## ✓ tibble  3.1.4     ✓ dplyr   1.0.7
-    ## ✓ tidyr   1.1.3     ✓ stringr 1.4.0
-    ## ✓ readr   2.0.1     ✓ forcats 0.5.1
-
-    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-    ## x dplyr::filter() masks stats::filter()
-    ## x dplyr::lag()    masks stats::lag()
-
 ## Problem 1
 
 Create a data frame comprised of:
@@ -33,6 +18,32 @@ Create a data frame comprised of:
 Solution:
 
 Create the sample:
+
+``` r
+library(tidyverse) 
+```
+
+    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.1 ──
+
+    ## ✓ ggplot2 3.3.5     ✓ purrr   0.3.4
+    ## ✓ tibble  3.1.4     ✓ dplyr   1.0.7
+    ## ✓ tidyr   1.1.3     ✓ stringr 1.4.0
+    ## ✓ readr   2.0.1     ✓ forcats 0.5.1
+
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
+
+``` r
+set.seed(1)
+prob1_df =
+  tibble(
+    sample_1 = rnorm(10),
+    samp_vec_0 = sample_1 > 0,
+    char_vec = c("a", "b", "c", "d", "e", "f", "g","h", "i", "j"),
+    fact_vec = factor(c("low", "high", "low", "high", "low", "high", "low", "mid", "mid", "low"))
+  )
+```
 
 Taking the mean of each variable.
 
@@ -124,8 +135,8 @@ The number of rows (observations) in the Penguin dataset is 344.
 
 The number of columns (variables) in the Penguin dataset is 8.
 
-This code chunk below is to generate a scatter plot for bill length and
-flipper length, each color represents a different species.
+This chunk is to generate a scatter plot for bill length and flipper
+length, each color represents a different species.
 
 ``` r
 library(ggplot2)
